@@ -2,19 +2,20 @@ package src.table;
 
 import src.enums.Condition;
 import src.enums.ItemType;
+import src.enums.Location;
 import src.enums.Weather;
 import src.exceptions.WrongWayOfUsingException;
+import src.groups.Out;
 import src.innerfuncs.*;
 import src.interfaces.GroupManager;
 import src.interfaces.ItemManager;
 import src.interfaces.ScriptInfo;
+import src.objects.Car;
 import src.objects.Item;
 import src.objects.Nature;
-import src.objects.Person;
 import src.table.actions.*;
 import src.table.actors.*;
 
-import java.lang.reflect.Method;
 
 
 public class Script implements ItemManager, GroupManager {
@@ -23,26 +24,21 @@ public class Script implements ItemManager, GroupManager {
 
 
     //actors
-    Luis luis = new Luis(Condition.NORMAL);
-    Gadge gadge = new Gadge(Condition.NORMAL);
-    Jude jude = new Jude(Condition.LIGHT_SORROW);
-    Rachel rachel = new Rachel(Condition.NORMAL);
-    Ellie ellie = new Ellie(Condition.NORMAL);
+    Luis luis = new Luis(Location.HOME, Condition.NORMAL);
+    Gadge gadge = new Gadge(Location.HOME, Condition.NORMAL);
+    Jude jude = new Jude(Location.OUT, Condition.LIGHT_SORROW);
+    Rachel rachel = new Rachel(Location.HOME, Condition.NORMAL);
+    Ellie ellie = new Ellie(Location.HOME, Condition.NORMAL);
 
     //items
-    Item kite = new Item("воздушный змей", ItemType.TOY, Condition.NORMAL);
-    Item crayon = new Item("цветные фломастеры",ItemType.DRAWINGTOOL ,Condition.NORMAL);
-    Item book = new Item("книжка Элли",ItemType.CANVAS ,Condition.NORMAL);
+    Item kite = new Item("воздушный змей", Location.HOME, ItemType.TOY, Condition.NORMAL);
+    Item crayon = new Item("цветные фломастеры",Location.HOME, ItemType.DRAWINGTOOL, Condition.NORMAL);
+    Item book = new Item("книжка Элли", Location.HOME, ItemType.CANVAS, Condition.NORMAL);
 
     // actions
     PoopWakeUp poopWakeUp = new PoopWakeUp();
-    ClotheChanging clotheChanging = new ClotheChanging();
-    PlayingWith playWith = new PlayingWith();
-    Remember remember = new Remember();
-    Saying say = new Saying();
     Drawing drawing = new Drawing();
-    Thinking thinking = new Thinking();
-    StunningSpeak stunningSpeak = new StunningSpeak();
+    WindEvent windEvent = new WindEvent();
 
     public Script(String name){ this.NAME = name;}
 
@@ -56,35 +52,21 @@ public class Script implements ItemManager, GroupManager {
         }
     };
 
-    public void printScript() throws WrongWayOfUsingException {
+    public void printScript() {
         scriptInfo.scriptInfo(this);
-        //PersonCreator.createPerson();
         Nature.WeatherForecast.printInfo();
-        addTo(luis, Groups.getHomeGroup());
-        addTo(gadge, Groups.getHomeGroup());
-        addTo(rachel, Groups.getHomeGroup());
-        addTo(ellie, Groups.getHomeGroup());
-        addTo(jude, Groups.getOutGroup());
         TimeSkipper.timeSkip(41, true);
-        printInfo(Groups.getHomeGroup());
+        printInfo(Location.HOME);
         TimeSkipper.timeSkip(40,true);
         QualityChange.changeQuality(Condition.SLEEP, gadge, true);
-        Groups.changeGroup(rachel);
-        Groups.changeGroup(ellie);
-        Item.Car car = (Item.Car)jude.getInventory().getFirst();
-        car.drive(Groups.getOutGroup(), jude, "магазин");
-        poopWakeUp.poopWakeUp(gadge, gadge.getInventory().get(0));
-        clotheChanging.changeClothes(luis, gadge, gadge.getInventory().get(0));
-        playWith.playWith(luis, gadge);
-        WeatherChanger.changeWeather(Weather.WINDY);
-        remember.remember(luis, kite);
-        say.say(luis, luis.call(gadge));
+        changeGroup(rachel);
+        changeGroup(ellie);
+        Car car = (Car)jude.getInventory().getFirst();
+        car.drive(Out.getGroup(), jude, "магазин");
+        poopWakeUp.poopWakeUp(gadge, luis,gadge.getInventory().get(0));
+        addItem(gadge, crayon);
         addItem(gadge, book);
-        addItem(gadge, book);
-        drawing.draw(gadge, gadge.getInventory().get(2),  gadge.getInventory().get(1));
-        thinking.think(luis, "еще один шаг, питающий детскую ревность");
-        say.say(gadge, "Что?");
-        say.say(luis, "Хочешь пойти гулять?");
-        stunningSpeak.stunningSpeak(gadge, luis);
+        drawing.draw(gadge, luis, gadge.getInventory().get(2),  gadge.getInventory().get(1));
+        windEvent.startEvent(luis, gadge, kite);
     }
 }
